@@ -1,3 +1,7 @@
+lldpd (0.9.7)
+  * Changes:
+    + When logging to syslog and daemonizing, don't log to stderr.
+
 lldpd (0.9.6)
   * Change:
     + Add a compile-time option to restore pre-0.9.2 JSON format (when
